src/scss/header/_masthead.scss
.next-header__masthead {
	display: none;
	padding-left: 0;
	padding-right: 0;
	position: relative;

	@include oGridRespondTo(M) {
		display: block;
	}
}

.next-header--light-on-dark {
	background-color: getColor('grey-tint5');
}

.next-header__masthead__logo {
	text-align: center;

	.next-header__logo__link {
		@include nextIcon(brand-ft-masthead, getColor('black'));
		display: block;
		margin: 17px auto;
		height: 27px;
		width: 336px;
		overflow: hidden;
		color: transparent;

		.next-header--light-on-dark & {
			@include nextIcon(brand-ft-masthead, $next-header-light-bg);
			display: block;
			height: 27px;
			width: 336px;
		}

		&:after {
			content: none;
		}
	}
}

.next-header__masthead__logo--mobile {
	display: block;
	margin: 18px 0;

	@include oGridRespondTo(XS) {
		margin: 15px 0;
	}

	@include oGridRespondTo(S) {
		margin: 10px 0;
	}

	@include oGridRespondTo(M) {
		display: none;
	}

	.next-header__logo__link {
		@include nextIcon(brand-ft-masthead, getColor('white'));
		display: block;
		height: 11px;
		width: 138px;
		margin: 0 auto;
		overflow: hidden;
		color: transparent;

		@include oGridRespondTo(XS) {
			height: 14px;
			width: 177px;
		}

		@include oGridRespondTo(S) {
			height: 21px;
			width: 265px;
		}

		&:after {
			content: none;
		}
	}
}

